Added solution to 'Multiply(Intro)' task.

--- a/Py CheckiO/Strings and Integers/Multiply (Intro)/task.html
+++ b/Py CheckiO/Strings and Integers/Multiply (Intro)/task.html
@@ -15,5 +15,5 @@ assert mult_two(0, 1) == 0
 </pre>
 <p>A series of hints below will help you to understand how to solve the mission. Start the series by clicking on "I don’t know how to solve that mission."</p>
 
-
+<p><a href="https://py.checkio.org/mission/multiply-intro/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/multiply-intro">See the task on CheckiO</a></p>
