Added solution to 'Acceptable Password I' task.

--- a/Py CheckiO/Strings and Integers/Acceptable Password I/task.html
+++ b/Py CheckiO/Strings and Integers/Acceptable Password I/task.html
@@ -32,5 +32,5 @@ assert is_acceptable_password(&quot;ashort&quot;) == False
 <i>For a password verification form. Also it’s good to learn how the task can be evaluated.</i>
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/acceptable-password-i/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/acceptable-password-i">See the task on CheckiO</a></p>
