Added solution to 'Is even' task.

--- a/Py CheckiO/Strings and Integers/Is Even/task.html
+++ b/Py CheckiO/Strings and Integers/Is Even/task.html
@@ -33,5 +33,5 @@ assert is_even(0) == True
 <i>given int should be between -1000 and 1000</i>
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/is-even/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/is-even">See the task on CheckiO</a></p>
