Added solution to 'Backward string' task.

--- a/Py CheckiO/Strings and Integers/Backward String/task.html
+++ b/Py CheckiO/Strings and Integers/Backward String/task.html
@@ -22,5 +22,5 @@ assert backward_string(&quot;123456789&quot;) == &quot;987654321&quot;
 </pre>
 </div>
 
-
+<p><a href="https://py.checkio.org/mission/backward-string/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/backward-string">See the task on CheckiO</a></p>
