Added solution to 'First Word (simplified)' task.

--- a/Py CheckiO/Strings and Integers/First Word (simplified)/task.html
+++ b/Py CheckiO/Strings and Integers/First Word (simplified)/task.html
@@ -38,5 +38,5 @@ assert first_word(&quot;hi&quot;) == &quot;hi&quot;
 <i>The text can contain a-z, A-Z and spaces.</i>
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/first-word-simplified/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/first-word-simplified">See the task on CheckiO</a></p>
