--- a/Py CheckiO/Strings and Integers/Number Length/task.html
+++ b/Py CheckiO/Strings and Integers/Number Length/task.html
@@ -22,5 +22,5 @@ assert number_length(44) == 2
 </pre>
 </div>
 
-
+<p><a href="https://py.checkio.org/mission/number-length/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/number-length">See the task on CheckiO</a></p>
