Added solution to 'Fizz Buzz' task.

--- a/Py CheckiO/Strings and Integers/Fizz Buzz/task.html
+++ b/Py CheckiO/Strings and Integers/Fizz Buzz/task.html
@@ -35,5 +35,5 @@ assert checkio(7) == &quot;7&quot;
     0 &lt; number ≤ 1000
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/fizz-buzz/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/fizz-buzz">See the task on CheckiO</a></p>
