Added different solutions to 'Three Words' task.

--- a/Py CheckiO/Strings and Integers/Three Words/task.html
+++ b/Py CheckiO/Strings and Integers/Three Words/task.html
@@ -35,5 +35,5 @@ assert checkio(&quot;bla bla bla bla&quot;) == True
     0 &lt; len(words) &lt; 100
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/three-words/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/three-words">See the task on CheckiO</a></p>
