Added solutions to 'Beginning Zeros' task.

--- a/Py CheckiO/Strings and Integers/Beginning Zeros/task.html
+++ b/Py CheckiO/Strings and Integers/Beginning Zeros/task.html
@@ -28,5 +28,5 @@ assert beginning_zeros(&quot;001001&quot;) == 2
 <i>0-9</i>
 </p>
 
-
+<p><a href="https://py.checkio.org/mission/beginning-zeros/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/beginning-zeros">See the task on CheckiO</a></p>
