Added solutions to 'Max Digit' task.

--- a/Py CheckiO/Strings and Integers/Max Digit/task.html
+++ b/Py CheckiO/Strings and Integers/Max Digit/task.html
@@ -22,5 +22,5 @@ assert max_digit(1) == 1
 </pre>
 </div>
 
-
+<p><a href="https://py.checkio.org/mission/max-digit/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/max-digit">See the task on CheckiO</a></p>
