Added solutions to 'Sum Numbers' task.

--- a/Py CheckiO/Strings and Integers/Sum Numbers/task.html
+++ b/Py CheckiO/Strings and Integers/Sum Numbers/task.html
@@ -28,5 +28,5 @@ assert (
 </pre>
 </div>
 
-
+<p><a href="https://py.checkio.org/mission/sum-numbers/publications/category/clear">View solutions</a></p>
 <p><a href="https://py.checkio.org/en/mission/sum-numbers">See the task on CheckiO</a></p>
